Update .gitignore for .csv files, update fsm_statemanager.py

--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@
 *.ipynb
 # Might be too large for git to handle
 *.dat
+*.csv
 # testing file for personal use aswell
 ingo_work.py
 # Vscode auto-generated configurations
